fixed menu oval on small screens

--- a/src/Components/menu/menu.css
+++ b/src/Components/menu/menu.css
@@ -104,5 +104,6 @@
     }
     .oval{
         rotate: 20deg;
+        scale: 0.5;
     }
 }
